feat/auto-prov (#19)
* impl w/ tests

* impl

* lint fixes

* lint fixes
